<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Factories\HasFactory;
use Illuminate\Database\Eloquent\Model;

class Product extends Model
{
    use HasFactory;

    protected $fillable = ['name', 'description', 'image_url', 'price', 'user_id'];

    
    public function categories()
    {
        return $this->belongsToMany(Category::class);
    }

   
    public function user()
    {
        return $this->belongsTo(User::class);
    }

    public function getCategoryLabelAttribute()
    {
        return $this->categories->pluck('label')->implode(', ');
    }
}
